Tweak color extractor options and prevent image overflow

--- a/src/app.css
+++ b/src/app.css
@@ -4,6 +4,6 @@
 
 @layer base {
   body {
-    @apply h-screen;
+    @apply h-screen font-mono;
   }
 }
